--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
@@ -30,7 +31,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
     "stripe": "^12.4.0",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
