--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js",
     "build": "node index.js",
     "start-dev": "nodemon index.js",
-    "data:import": "node seed.js",
+    "update:quantities": "node scripts/update-quantities.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
