--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node index.js",
     "start-dev": "nodemon index.js",
     "update:quantities": "node scripts/update-quantities.js",
+    "update-price-percentage": "node scripts/update-price-percentage.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
