Add skuArrangementOrderNo field to Product and Products models. Update sorting in getAllProductsService to use skuArrangementOrderNo for improved product retrieval. Add script for updating SKU arrangement in package.json.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start-dev": "nodemon index.js",
     "update:quantities": "node scripts/update-quantities.js",
     "update-price-percentage": "node scripts/update-price-percentage.js",
+    "update:sku-arrangement": "node scripts/update-sku-arrangement.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
