Add new fields for updated pricing in Products model and update related scripts. Introduce 'updatedPrice' and 'finalPriceDiscount' fields to the Products schema for enhanced pricing management. Modify the update-quantities script to reference the correct Products model, ensuring accurate quantity updates across the application. Additionally, add a new script command for calculating prices in package.json to streamline pricing updates.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "update:quantities": "node scripts/update-quantities.js",
     "update-price-percentage": "node scripts/update-price-percentage.js",
     "update:sku-arrangement": "node scripts/update-sku-arrangement.js",
+    "update:calculated-prices": "node scripts/update-calculated-prices.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
