--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "facebook-nodejs-business-sdk": "^23.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "mongoose-sequence": "^5.3.1",
