--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.0.0",
     "facebook-nodejs-business-sdk": "^23.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
@@ -35,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.1.5",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.9.2",
     "stripe": "^12.4.0",
     "validator": "^13.9.0",
