Add generate:reviews script and enhance product review population in getSingleProduct method. This update introduces a new script for generating product reviews and modifies the product controller to sort reviews by creation date when fetching products by ID or slug, improving the detail and usability of product information returned to the client.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "update-price-percentage": "node scripts/update-price-percentage.js",
     "update:sku-arrangement": "node scripts/update-sku-arrangement.js",
     "update:calculated-prices": "node scripts/update-calculated-prices.js",
+    "generate:reviews": "node scripts/generate-reviews.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
