--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "engines": {
     "node": ">=16"
   },
@@ -23,6 +24,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
+    "better-auth": "^1.3.7",
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -32,6 +34,7 @@
     "express-rate-limit": "^8.0.0",
     "facebook-nodejs-business-sdk": "^23.0.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^6.18.0",
     "mongoose": "^7.0.1",
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
