--- a/env.example
+++ b/env.example
@@ -10,15 +10,14 @@ META_PIXEL_ID=your-meta-pixel-id-here
 META_ACCESS_TOKEN=your-system-user-access-token-here
 META_API_VERSION=v23.0
 
-# Email Configuration
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-email-password
+# Email Configuration - Gmail App Password
+GMAIL_USER=your-gmail-address@gmail.com
+GOOGLE_APP_PASSWORD=your-16-character-app-password
+APP_NAME=EWO App
 
 # JWT Configuration
 JWT_SECRET=your-jwt-secret-key
 
 # Other API Keys
 STRIPE_SECRET_KEY=your-stripe-secret-key
-STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret 
+STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
