Update package.json and vercel.json for improved deployment and compatibility
- Change Node.js engine requirement from 18.x to >=16 for broader compatibility.
- Update build script in package.json to run the application directly instead of echoing a message.
- Add builds section in vercel.json to specify the entry point for Vercel deployment, ensuring proper handling of the Node.js application.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": ">=16"
   },
   "scripts": {
     "start": "node index.js",
-    "build": "echo 'Build completed'",
+    "build": "node index.js",
     "start-dev": "nodemon index.js",
     "update:quantities": "node scripts/update-quantities.js",
     "update-price-percentage": "node scripts/update-price-percentage.js",
