--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": "20.x"
+    "node": ">=16"
   },
   "scripts": {
     "start": "node index.js",
-    "build": "echo 'No build step required for Node.js API'",
-    "vercel-build": "echo 'No build step required for Node.js API'",
+    "build": "node index.js",
     "start-dev": "nodemon index.js",
     "update:quantities": "node scripts/update-quantities.js",
     "update-price-percentage": "node scripts/update-price-percentage.js",
