--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node index.js",
     "build": "node index.js",
-    "start-dev": "nodemon index.js",
+    "dev": "nodemon index.js",
     "update:quantities": "node scripts/update-quantities.js",
     "update-price-percentage": "node scripts/update-price-percentage.js",
     "update:sku-arrangement": "node scripts/update-sku-arrangement.js",
