--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nanoid": "^5.1.5",
     "node-cron": "^4.2.1",
     "nodemailer": "^6.9.2",
+    "redis": "^5.9.0",
     "stripe": "^12.4.0",
     "validator": "^13.9.0",
     "winston": "^3.17.0"
