chore: update .gitignore and optimize product service queries
- Added new files to .gitignore for better management of environment and report files.
- Removed unnecessary .populate('reviews') calls in product service methods to enhance performance, as reviews are not needed for product listings.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ TASK_COMPLETION_REPORT.md
 TASK_COMPLETION_REPORT.md
 .env*.local
 REDIS_SETUP.md
+PERFORMANCE_REPORT.md
+QUICK_START_REDIS.md
+REDIS_ENV_EXAMPLE.txt
+REDIS_IMPLEMENTATION_SUMMARY.md
