chore: enhance email templates and update .gitignore
- Added new entries to .gitignore for improved file management.
- Updated email templates to include selected options for products in order confirmation, shipping confirmation, and feedback emails, enhancing clarity for recipients.
- Adjusted HTML structure in email templates for better presentation of product details.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@ PERFORMANCE_REPORT.md
 QUICK_START_REDIS.md
 REDIS_ENV_EXAMPLE.txt
 REDIS_IMPLEMENTATION_SUMMARY.md
+PERFORMANCE_FIX_REPORT.md
+QUICK_START_REDIS.md
+REDIS_ENV_EXAMPLE.txt
+REDIS_IMPLEMENTATION_SUMMARY.md
+PERFORMANCE_FIX_REPORT.md
+QUICK_START_REDIS.md
+REDIS_ENV_EXAMPLE.txt
+REDIS_IMPLEMENTATION_SUMMARY.md
+PERFORMANCE_FIX_REPORT.md
+QUICK_START_REDIS.md
+REDIS_ENV_EXAMPLE.txt
+REDIS_IMPLEMENTATION_SUMMARY.md
+PERFORMANCE_FIX_REPORT.md
