--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "update:sku-arrangement": "node scripts/update-sku-arrangement.js",
     "update:calculated-prices": "node scripts/update-calculated-prices.js",
     "generate:reviews": "node scripts/generate-reviews.js",
+    "increase-prices-15": "node scripts/increase-prices-15-percent.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
