chore: add seed script for reviews
- Introduced a new script command in package.json to seed reviews using the specified script. This addition enhances the ability to populate the database with sample review data for testing and development purposes.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "update:sku-arrangement": "node scripts/update-sku-arrangement.js",
     "update:calculated-prices": "node scripts/update-calculated-prices.js",
     "generate:reviews": "node scripts/generate-reviews.js",
+    "seed:reviews-e90157": "node scripts/seed-reviews-e90157.js",
     "increase-prices-15": "node scripts/increase-prices-15-percent.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
