feat: enhance shipping functionality to support multiple carriers
- Updated the shipping controller to handle both new (multiple carriers) and legacy (single carrier) formats for shipping details.
- Modified the Order model to include a new schema for multiple carriers, ensuring backward compatibility.
- Enhanced the email service to correctly format and send shipping confirmations with multiple carriers.
- Updated the shipping service to process shipments with an array of carriers, improving flexibility in shipping options.
- Adjusted the email template to display shipping information for multiple carriers, enhancing user experience.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "generate:reviews": "node scripts/generate-reviews.js",
     "seed:reviews": "node scripts/seed-reviews.js",
     "increase-prices-15": "node scripts/increase-prices-15-percent.js",
+    "export:products-csv": "node scripts/export-products-csv.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
