feat: add export script for SKU shipping CSV
- Introduced a new script command in package.json to export SKU shipping data to a CSV file, enhancing data management capabilities.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "seed:reviews": "node scripts/seed-reviews.js",
     "increase-prices-15": "node scripts/increase-prices-15-percent.js",
     "export:products-csv": "node scripts/export-products-csv.js",
+    "export:sku-shipping-csv": "node scripts/export-sku-shipping-csv.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
