feat: add publish status management for products
- Introduced publishStatus field in the Products model to manage product visibility (draft or published).
- Implemented updateProductPublishStatus controller for toggling publish status via API.
- Updated product service methods to handle publish status during product creation and updates.
- Enhanced product query logic to filter based on publish status, ensuring only published products are shown in storefront.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "increase-prices-15": "node scripts/increase-prices-15-percent.js",
     "export:products-csv": "node scripts/export-products-csv.js",
     "export:sku-shipping-csv": "node scripts/export-sku-shipping-csv.js",
+    "migrate:publish-status": "node scripts/migrate-publish-status.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
