--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "export:products-csv": "node scripts/export-products-csv.js",
     "export:sku-shipping-csv": "node scripts/export-sku-shipping-csv.js",
     "migrate:publish-status": "node scripts/migrate-publish-status.js",
+    "migrate:sort-key": "node scripts/migrate-sort-key.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -37,6 +38,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.0.0",
     "facebook-nodejs-business-sdk": "^23.0.0",
+    "fractional-indexing": "^3.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.18.0",
     "mongoose": "^7.0.1",
